--- a/src/lib/resources/components/calendar-yearly/calendar-yearly.component.css
+++ b/src/lib/resources/components/calendar-yearly/calendar-yearly.component.css
@@ -2,3 +2,7 @@
   position: relative !important;
   background: none !important;
 }
+
+.justify-content-end{
+  justify-content: flex-end !important;
+}
