--- a/src/lib/resources/components/calendar-monthly/calendar-monthly.component.css
+++ b/src/lib/resources/components/calendar-monthly/calendar-monthly.component.css
@@ -17,8 +17,12 @@
 }
 
 .month-list{
-  padding: 0 !important;
+  padding: 0 5px 0px 5px;
   margin-bottom: 5px !important;
-
   gap: 5 !important;
+}
+
+
+.justify-content-end{
+  justify-content: flex-end !important;
 }
