--- a/src/lib/lib.component.css
+++ b/src/lib/lib.component.css
@@ -13,3 +13,109 @@
 .calendarr::before {
   content: '\f073';
 }
+
+.date-input {
+  position: relative !important;
+  display: grid !important;
+  background-color: var(--bg-main) !important;
+  width: 100% !important;
+  color: var(--color-txt) !important;
+}
+
+.date-input input {
+  padding: 8px 12px !important;
+  background: none !important;
+  font-size: 14px !important;
+  color: var(--color-txt) !important;
+  border: 0px !important;
+}
+
+.date-input input::placeholder {
+  color: var(--color-txt) !important;
+}
+
+.date-input input:focus {
+  outline: none !important;
+  color: var(--color-txt) !important;
+}
+
+.date-input i {
+  position: absolute !important;
+  top: 50% !important;
+  right: 0px !important;
+  transform: translateY(-50%) !important;
+  height: 100% !important;
+  align-items: center !important;
+  justify-content: center !important;
+  display: flex !important;
+  width: 40px !important;
+  cursor: pointer !important;
+  font-size: 20px !important;
+  color: var(--color-txt) !important;
+}
+
+.light {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  width: 100% !important;
+  place-items: center !important;
+  font-family: var(--font-family) !important;
+}
+
+@media screen and (max-width: 767px) {
+  .light {
+    width: 100% !important;
+  }
+
+  .light .date-input {
+    width: 100% !important;
+  }
+
+  .light .calendar {
+    width: 100% !important;
+  }
+
+  .dark {
+    width: 100% !important;
+  }
+
+  .dark .date-input {
+    width: 100% !important;
+  }
+
+  .dark .calendar {
+    width: 100% !important;
+  }
+}
+
+.dark {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  flex-direction: column !important;
+  place-items: center !important;
+  font-family: var(--font-family) !important;
+}
+
+.calendar {
+  height: max-content !important;
+  width: max-content !important;
+  background-color: var(--bg-main) !important;
+  /* position: absolute !important; */
+  z-index: 999 !important;
+  overflow: hidden !important;
+  display: none !important;
+  width: 100% !important;
+  max-width: -moz-available !important;
+  /* transform: scale(1.25); */
+}
+
+.calendar.show {
+  display: block !important;
+}
+
+.light .calendar {
+  box-shadow: var(--shadow) !important;
+}
