--- a/src/lib/lib.component.css
+++ b/src/lib/lib.component.css
@@ -1,11 +1,10 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css');
-@import url('https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css');
+@import url('https://cdn.jsdelivr.net/gh/JordaoNhanga15/CDN-for-Assets@main/bootstrap.css');
 
 .twitter::before {
   content: '\f099';
 }
 
-/* Regular Icon */
 .user::before {
   content: '\f007';
 }
